<resources>
    <string name="item_name">Item Name</string>
    <string name="sku">SKU</string>
    <string name="category">Category</string>
    <string name="quantity">Quantity</string>
    <string name="supplier">Supplier</string>
    <string name="reorder_level">Reorder Level</string>
    <string name="unit_price">Unit Price</string>
    <string name="save">Save</string>
    <string name="app_name" translatable="false">Warehouse App</string>
    <string name="add_item">Add Item</string>
    <string name="quantity_text">Quantity: %1$d</string>
    <string name="ean">EAN</string>
    <string name="update_item">Edit</string>
    <string name="item_updated">Item updated</string>
    <string name="item_added">Item added</string>
    <string name="item_deleted">Item deleted</string>
    <string name="delete">Delete</string>
    <string name="items">items</string>
    <string name="warehouse_actions">Warehouse Actions</string>
    <string name="add_warehouse_item">Add Warehouse Action</string>
    <string name="api_products">API Products</string>
</resources>